[gd_scene load_steps=4 format=3 uid="uid://b2y1iu1qnblv6"]

[ext_resource type="Script" path="res://UI/Lobby_info.gd" id="1_fk4lg"]
[ext_resource type="Texture2D" uid="uid://dpreqp71dim8b" path="res://UI/button_test.png" id="1_urmfj"]

[sub_resource type="LabelSettings" id="LabelSettings_3pbc3"]
font_size = 48

[node name="IpAddress" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fk4lg")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 31

[node name="IP" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "127.0.0.1"
label_settings = SubResource("LabelSettings_3pbc3")

[node name="Name" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "TEST"
label_settings = SubResource("LabelSettings_3pbc3")

[node name="Player_Count" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "0/8"
label_settings = SubResource("LabelSettings_3pbc3")

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureButton" type="TextureButton" parent="HBoxContainer/Control/CenterContainer"]
custom_minimum_size = Vector2(150, 64)
layout_mode = 2
texture_normal = ExtResource("1_urmfj")
stretch_mode = 0

[node name="Label" type="Label" parent="HBoxContainer/Control/CenterContainer"]
layout_mode = 2
text = "Join"
label_settings = SubResource("LabelSettings_3pbc3")

[connection signal="button_up" from="HBoxContainer/Control/CenterContainer/TextureButton" to="." method="_on_texture_button_button_up"]
